# Olivia

./: .gitmodules  CMakeLists.txt  compile.bat
Engine/: CMakeLists.txt
Engine/Include/Olivia/: Olivia.h  Olivia_Core.h  Olivia_Defines.h  Olivia_ECS.h  Olivia_Engine.h  Olivia_Events.h  Olivia_Graphics.h  Olivia_Math.h  Olivia_MeshPrimitives.h  Olivia_Platform.h  Olivia_Platform_Impl.h  Olivia_Renderer.h  Olivia_Renderer_Impl.h  Olivia_Runtime.h  Olivia_Systems.h  Vector.h  olivia.h  olivia_context.h  olivia_platform.h  olivia_renderer.h
Engine/Include/Olivia/Core/: Olivia_Defines.h  Olivia_Logger.h  olivia_core_internal.h  olivia_memory.h
Engine/Include/Olivia/Events/: Olivia_Event.h
Engine/Include/Olivia/Graphics/: Olivia_Descriptor.h  Olivia_Instance.h  Olivia_Mesh.h  Olivia_Pipeline.h  Olivia_Renderer.h  Olivia_VulkanCore.h
Engine/Include/Olivia/Runtime/: Olivia_Component.h  Olivia_Registry.h  Olivia_System.h
Engine/Include/Olivia/Runtime/System/: Olivia_InputSystem.h  Olivia_MovementSystem.h  Olivia_RenderSystem.h
Engine/Include/Olivia/Systems/: Olivia_CameraSystem.h  Olivia_RenderSystem.h
Engine/Include/Olivia/context/: olivia_context_internal.h
Engine/Include/Olivia/core/: defines.h  logger.h  types.h  vector.h
Engine/Include/Olivia/graphics/: olivia_graphics_internal.h  vulkan_buffer.h  vulkan_core.h  vulkan_mesh.h
Engine/Include/Olivia/platform/: olivia_platform_internal.h  sdl3_input.h
Engine/Include/Olivia/renderer/: olivia_renderer_internal.h
Engine/Include/Olivia/runtime/: olivia_components.h  olivia_runtime_internal.h
Engine/Shaders/: olivia.frag  olivia.vert  olivia.vert.spv
Engine/Source/: Olivia.cpp  Olivia_Engine.cpp  Olivia_Events.cpp  Olivia_Graphics.cpp  Olivia_Main.cpp  Olivia_Math.cpp  Olivia_MeshPrimitives.cpp  Olivia_Runtime.cpp  Olivia_Systems.cpp  Vulkan_Renderer.cpp  Win32_Main.cpp  Win32_Platform.cpp
Engine/Source/Core/: Olivia_Logger.cpp
Engine/Source/ECS/: Olivia_ECS.cpp
Engine/Source/ECS/Systems/: Olivia_CameraSystem.cpp  Olivia_RenderSystem.cpp
Engine/Source/Platform/: Win32_Platform.cpp
Engine/Source/Renderer/: Vulkan_Graphics.cpp  Vulkan_Graphics.h  Vulkan_Renderer.cpp
Engine/Source/Renderer/Vulkan/: Vulkan_Helpers.cpp  Vulkan_Helpers.h  Vulkan_Renderer.h
Engine/Source/Shaders/: olivia_2d.frag  olivia_2d.vert  olivia_2d.vert.spv
Engine/src/: olivia.cpp  olivia_context.cpp  olivia_core.cpp  olivia_graphics.cpp  olivia_launcher.cpp  olivia_platform.cpp  olivia_renderer.cpp  olivia_runtime.cpp
Game/: CMakeLists.txt
Game/Source/: Game.cpp
Program/: CMakeLists.txt
Program/Source/: Olivia_Main.cpp
Source/Common/: Allocator.cpp  Allocator.h  Vector.h
Source/Graphics/: Graphics.h
Source/Graphics/Vulkan/: Vulkan_Buffer.cpp  Vulkan_Buffer.h  Vulkan_Graphics.cpp  Vulkan_Graphics.h  Vulkan_Renderer.cpp  Vulkan_Renderer.h
Source/Platform/: Module.cpp  Module.h  Platform.h  PlatformCreateInfo.h
Source/Platform/Win32/: Platform.cpp  Platform.h  Win32_Platform.cpp  Win32_Platform.h
Source/Programs/: CMakeLists.txt
Source/Programs/DLL/: CMakeLists.txt  Game.cpp
Source/Programs/Editor/: CMakeLists.txt  Olivia.cpp  Olivia_Editor.cpp
Source/Programs/Game/: CMakeLists.txt  Olivia.cpp  Olivia_Game.cpp
Source/Programs/Olivia/: CMakeLists.txt  Olivia.cpp
Source/Public/: Olivia.h  Olivia_Defines.h  Olivia_Input.h
Source/Renderer/: Renderer.h  RendererCreateInfo.h
Source/Renderer/Vulkan/: Vulkan_Renderer.cpp  Vulkan_Renderer.h
Source/Shared/: Input.h
Tests/Allocator/: CMakeLists.txt  Test.cpp
include/olivia/: olivia.h  olivia_math.h  olivia_systems.h  olivia_types.h
samples/: 000_setup.cpp  CMakeLists.txt
shaders/: olivia2d.frag  olivia2d.frag.spv  olivia2d.vert  olivia2d.vert.spv  olivia3d.frag.spv  olivia3d.vert  olivia3d.vert.spv
src/: olivia.cpp  olivia_systems.cpp  olivia_types.h
tests/: CMakeLists.txt
tests/vector/: CMakeLists.txt  test_vector.cpp
